k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: javeriana-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: javeriana-app
  template:
    metadata:
      labels:
        app: javeriana-app
    spec:
      containers:
        - name: javeriana-container
          image: rainydevil/javeriana
          imagePullPolicy: Never  # Usa IfNotPresent si necesitas probar imágenes locales
          ports:
            - containerPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: javeriana-service
spec:
  selector:
    app: javeriana-app
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: LoadBalancer  # Cambia a NodePort si usas Minikube
