k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
  namespace: thymeleaf
spec:
  selector:
    app: test
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8081
